# xpyct_bot

./: .env  README.md  cenz.json  cenz.txt  index.md  main.py  prefix.json  pyproject.toml  requirements.txt  to_json.py  webserver.py
.github/workflows/: codeql-analysis.yml
cogs/: basic_voice.py  guessing_game.py  guession_game.py  head_or_tails.py  info_of_server.py  link.py  logs(unloaded).txt  logs.py  music.py  muteandban(unloaded).txt  youtube_music.py
