[tool.poetry]
name = "repl_python3_beta_creeperbot"
version = "0.1.0"
description = ""
authors = ["dima47452 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
